--- a/tasks/install/util/foreman_system_users.yml
+++ b/tasks/install/util/foreman_system_users.yml
@@ -2,19 +2,21 @@
 
 - name: Ensure Foreman user group exists
   ansible.builtin.group:
-    name: '{{ foreman_user_group.name }}'
-    gid: '{{ foreman_user_group.gid }}'
-    state: '{{ foreman_user_group.state | default("present") }}'
+    name: '{{ foreman_system_user.name }}'
+    gid: '{{ foreman_system_user.gid }}'
+    state: '{{ foreman_system_user.state | default("present") }}'
+  failed_when: false
 
 - name: Ensure Foreman user exists
   ansible.builtin.user:
-    name: '{{ foreman_user_group.name }}'
-    uid: '{{ foreman_user_group.uid }}'
+    name: '{{ foreman_system_user.name }}'
+    uid: '{{ foreman_system_user.uid }}'
     groups:
-      - '{{ foreman_user_group.name }}'
+      - '{{ foreman_system_user.name }}'
     create_home: '{{ foreman_user_group.state | default("present") == "present" }}'
-    home: '{{ foreman_user_group.home_dir }}'
+    home: '{{ foreman_system_user.home_dir }}'
     state: '{{ foreman_user_group.state | default("present") }}'
+  failed_when: false
 
 - name: Process User Directory
   ansible.builtin.include_tasks:
@@ -22,4 +24,4 @@
   loop: '{{ foreman_user_group.directories | default([]) }}'
   loop_control:
     loop_var: foreman_user_directory
-    label: '{{ foreman_user_directory.name }}'
+    label: '{{ foreman_system_user.name }}'
